<resources>
    <string name="app_name">Lifestyle</string>

    <!-- Strings used for creating a profile-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer Not to Say</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="lbs">lbs</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="background_picture">Background Picture</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>

    <!-- Strings used for logging in-->
    <string name="title_activity_login">Login</string>
    <string name="select_a_profile">Select a Profile</string>
    <string name="create_a_profile">Create a Profile</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_b_m_iactivity">BMIactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="no">No</string>
    <string name="are_you_active">Are You Active?</string>
    <string name="Lose">Lose</string>
    <string name="Maintain">Maintain</string>
    <string name="Gain">Gain</string>
    <string name="Gain_Loss">Gain, Lose, or Maintain</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="how_many_lbs">How many pounds you want to gain/lose?</string>
    <string name="Background" />
    <string name="title_activity_step_counter">StepCounter</string>


</resources>