<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <TextView
        android:id="@+id/first_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/last_name_tv"
        app:layout_constraintEnd_toStartOf="@+id/first_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/age_tv"
        app:layout_constraintEnd_toStartOf="@+id/last_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_tv" />

    <TextView
        android:id="@+id/age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="15dp"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/height_tv"
        app:layout_constraintEnd_toStartOf="@+id/age_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_tv" />

    <TextView
        android:id="@+id/height_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="15dp"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/weight_tv"
        app:layout_constraintEnd_toStartOf="@+id/feet_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_tv" />

    <TextView
        android:id="@+id/weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/sex_tv"
        app:layout_constraintEnd_toStartOf="@+id/weight_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_tv" />

    <TextView
        android:id="@+id/sex_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sex"
        app:layout_constraintBottom_toTopOf="@+id/city_tv"
        app:layout_constraintEnd_toStartOf="@+id/sex_rbtn_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_tv" />

    <TextView
        android:id="@+id/city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/country_tv"
        app:layout_constraintEnd_toStartOf="@+id/city_et"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_tv" />

    <TextView
        android:id="@+id/country_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="15dp"
        android:text="@string/country"
        app:layout_constraintBottom_toTopOf="@+id/profile_picture_tv"
        app:layout_constraintEnd_toStartOf="@+id/country_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_tv" />

    <TextView
        android:id="@+id/profile_picture_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:layout_marginBottom="15dp"
        android:text="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/upload_profile_picture_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/background_picture_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/background_picture"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toStartOf="@+id/upload_background_picture_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_tv"
        app:layout_constraintVertical_bias="0.254" />

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/last_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/age_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/last_name_tv" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_et" />

    <EditText
        android:id="@+id/feet_et"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/feet_tv"
        app:layout_constraintTop_toBottomOf="@+id/age_et" />

    <TextView
        android:id="@+id/feet_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/feet"
        app:layout_constraintEnd_toStartOf="@+id/inches_et"
        app:layout_constraintTop_toBottomOf="@+id/age_et" />

    <EditText
        android:id="@+id/inches_et"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/inches_tv"
        app:layout_constraintTop_toBottomOf="@+id/age_et" />

    <TextView
        android:id="@+id/inches_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_et" />

    <EditText
        android:id="@+id/weight_et"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/lbs_tv"
        app:layout_constraintTop_toBottomOf="@+id/inches_tv" />

    <TextView
        android:id="@+id/lbs_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/lbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches_tv" />

    <RadioGroup
        android:id="@+id/sex_rbtn_group"
        android:layout_width="322dp"
        android:layout_height="39dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="9dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/city_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sex_tv"
        app:layout_constraintTop_toBottomOf="@+id/weight_et">

        <RadioButton
            android:id="@+id/male_rbtn"
            android:layout_width="74dp"
            android:layout_height="36dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/prefer_not_to_say_rbtn"
            android:layout_width="148dp"
            android:layout_height="45dp"
            android:text="@string/prefer_not_to_say" />

    </RadioGroup>

    <EditText
        android:id="@+id/city_et"
        android:layout_width="206dp"
        android:layout_height="29dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_rbtn_group" />

    <EditText
        android:id="@+id/country_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_et" />

    <Button
        android:id="@+id/upload_profile_picture_btn"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/upload_background_picture_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_et"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/upload_background_picture_btn"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_profile_picture_btn" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_background_picture_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>